[package]
name = "bt-api"
version = "7.1.0"
authors = ["Botho"]
build = "build.rs"
edition = "2021"
links = "bt-api"
license = "Apache-2.0"
readme = "README.md"
rust-version = { workspace = true }

[dependencies]
bt-account-keys = { workspace = true }
bt-blockchain-types = { workspace = true }
bt-common = { workspace = true }
bt-crypto-keys = { workspace = true }
bt-crypto-multisig = { workspace = true }
bt-crypto-ring-signature-signer = { workspace = true }
bt-transaction-builder = { workspace = true }
bt-transaction-core = { workspace = true }
bt-transaction-extra = { workspace = true }
bt-transaction-summary = { workspace = true }
bt-util-repr-bytes = { workspace = true }
bt-util-serial = { workspace = true }
bt-util-uri = { workspace = true }

bs58 = { workspace = true }
crc = { workspace = true }
displaydoc = { workspace = true }

curve25519-dalek = { workspace = true }
prost = { workspace = true }

[build-dependencies]
bt-util-build-grpc-tonic = { workspace = true }
bt-util-build-script = { workspace = true }

cargo-emit = { workspace = true }

[dev-dependencies]
bt-blockchain-test-utils = { workspace = true }
bt-crypto-ring-signature-signer = { workspace = true }
bt-crypto-x509-test-vectors = { workspace = true }
bt-test-vectors-b58-encodings = { workspace = true }
bt-transaction-builder = { workspace = true, features = ["test-only"] }
bt-util-from-random = { workspace = true }
bt-util-serial = { workspace = true, features = ["test_utils"] }
bt-util-test-helper = { workspace = true }
bt-util-test-vector = { workspace = true }
bt-util-test-with-data = { workspace = true }
bt-util-zip-exact = { workspace = true }

assert_matches = { workspace = true }
generic-array = { workspace = true }
pem = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rand_hc = { workspace = true }
