[package]
name = "bth-api"
version = "7.1.0"
authors = ["Botho"]
build = "build.rs"
edition = "2021"
links = "bth-api"
license = "Apache-2.0"
readme = "README.md"
rust-version = { workspace = true }

[dependencies]
bth-account-keys = { workspace = true }
bth-blockchain-types = { workspace = true }
bth-common = { workspace = true }
bth-crypto-keys = { workspace = true }
bth-crypto-multisig = { workspace = true }
bth-crypto-ring-signature-signer = { workspace = true }
bth-transaction-builder = { workspace = true }
bth-transaction-core = { workspace = true }
bth-transaction-extra = { workspace = true }
bth-transaction-summary = { workspace = true }
bth-util-repr-bytes = { workspace = true }
bth-util-serial = { workspace = true }
bth-util-uri = { workspace = true }

bs58 = { workspace = true }
crc = { workspace = true }
displaydoc = { workspace = true }

curve25519-dalek = { workspace = true }
prost = { workspace = true }

[build-dependencies]
bth-util-build-grpc-tonic = { workspace = true }
bth-util-build-script = { workspace = true }

cargo-emit = { workspace = true }

[dev-dependencies]
bth-blockchain-test-utils = { workspace = true }
bth-crypto-ring-signature-signer = { workspace = true }
bth-test-vectors-b58-encodings = { workspace = true }
bth-transaction-builder = { workspace = true, features = ["test-only"] }
bth-util-from-random = { workspace = true }
bth-util-serial = { workspace = true, features = ["test_utils"] }
bth-util-test-helper = { workspace = true }
bth-util-test-vector = { workspace = true }
bth-util-test-with-data = { workspace = true }
bth-util-zip-exact = { workspace = true }

assert_matches = { workspace = true }
generic-array = { workspace = true }
pem = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
rand_hc = { workspace = true }
