[package]
name = "botho-wallet"
version = "0.1.0"
edition = "2021"
description = "Standalone thin wallet client for Botho cryptocurrency"
license = "Apache-2.0"
rust-version = { workspace = true }

[[bin]]
name = "botho-wallet"
path = "src/main.rs"

[dependencies]
# Crypto
bth-account-keys = { path = "../account-keys" }
bth-crypto-keys = { path = "../crypto/keys" }
bth-transaction-core = { path = "../transaction/core" }
bth-transaction-types = { path = "../transaction/types" }
bth-core = { path = "../core" }

# BIP39 and key derivation
tiny-bip39 = { workspace = true }
slip10_ed25519 = { workspace = true }

# Encryption
argon2 = "0.5"
chacha20poly1305 = "0.10"

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# HTTP client for RPC
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

# CLI
clap = { workspace = true, features = ["derive"] }
rpassword = "7"
chrono = { workspace = true, features = ["std", "clock"] }
sha2 = { workspace = true }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
toml = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true, features = ["std"] }

# Utils
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Memory",
] }

[dev-dependencies]
tempfile = { workspace = true }
