[package]
name = "botho"
version = "0.1.0"
edition = "2021"
description = "A privacy-preserving mined cryptocurrency"
license = "GPL-3.0"

[features]
default = ["pq"]
pq = ["bth-account-keys/pq", "bth-crypto-pq"]

[lib]
name = "botho"
path = "src/lib.rs"

[[bin]]
name = "botho"
path = "src/main.rs"

[[bin]]
name = "scp_sim"
path = "src/bin/scp_sim.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

# Crypto & Keys
bth-account-keys = { path = "../account-keys" }
bth-crypto-keys = { path = "../crypto/keys" }
bth-crypto-pq = { path = "../crypto/pq", optional = true }
bth-crypto-ring-signature = { path = "../crypto/ring-signature" }
bth-core = { path = "../core" }
bth-util-from-random = { path = "../util/from-random" }
rand_core = "0.6"
aes = { workspace = true }
ctr = { workspace = true }
hkdf = { workspace = true }

# Monetary Policy
bth-cluster-tax = { path = "../cluster-tax" }

# Networking & Consensus
bth-gossip = { path = "../gossip" }
bth-common = { path = "../common", features = ["std"] }
bth-consensus-scp = { path = "../consensus/scp", features = ["test_utils"] }
bth-consensus-scp-types = { path = "../consensus/scp/types", features = ["test_utils"] }
bth-crypto-digestible = { path = "../crypto/digestible" }
libp2p = { version = "0.54", features = ["tokio"] }
futures = "0.3"
bip39 = { package = "tiny-bip39", version = "1" }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
bs58 = "0.5"

# System
ctrlc = "3"
num_cpus = "1"

# Storage
lmdb = { package = "lmdb-rkv", version = "0.14" }
bincode = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Async (for future networking)
tokio = { version = "1", features = ["full"] }

# JSON-RPC server
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
serde_json = "1"

# For SCP simulation
crossbeam-channel = "0.5"
dashmap = "6"

[dev-dependencies]
tempfile = "3"
