[package]
name = "botho"
version = "0.1.0"
edition = "2021"
description = "A privacy-preserving mined cryptocurrency"
license = "GPL-3.0"

[features]
default = ["pq"]
pq = ["bth-account-keys/pq", "bth-crypto-pq"]

[lib]
name = "botho"
path = "src/lib.rs"

[[bin]]
name = "botho"
path = "src/main.rs"

[[bin]]
name = "scp_sim"
path = "src/bin/scp_sim.rs"

[[bin]]
name = "botho-testnet"
path = "src/bin/botho_testnet.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "5"

# Crypto & Keys
bth-account-keys = { path = "../account-keys" }
bth-crypto-keys = { path = "../crypto/keys" }
bth-crypto-pq = { path = "../crypto/pq", optional = true }
bth-crypto-ring-signature = { path = "../crypto/ring-signature" }
bth-crypto-lion = { path = "../crypto/lion" }
bth-core = { path = "../core" }
bth-util-from-random = { path = "../util/from-random" }
rand_core = "0.6"
aes = { workspace = true }
ctr = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }

# Monetary Policy
bth-cluster-tax = { path = "../cluster-tax" }
bth-transaction-types = { path = "../transaction/types", default-features = true }

# Networking & Consensus
bth-gossip = { path = "../gossip" }
bth-common = { path = "../common", features = ["std"] }
bth-consensus-scp = { path = "../consensus/scp", features = ["test_utils"] }
bth-consensus-scp-types = { path = "../consensus/scp/types", features = ["test_utils"] }
bth-crypto-digestible = { path = "../crypto/digestible" }
libp2p = { workspace = true, features = ["tokio"] }
futures = "0.3"
bip39 = { package = "tiny-bip39", version = "1" }
rand = "0.8"
rand_distr = "0.4"
hex = "0.4"
sha2 = "0.10"
bs58 = "0.5"
siphasher = "1.0"

# System
ctrlc = "3"
num_cpus = "1"

# Storage
heed = "0.20"
bincode = "1"

# Logging & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Security
zeroize = { workspace = true }

# Async (for future networking)
tokio = { version = "1", features = ["full"] }

# JSON-RPC server
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
serde_json = "1"
tokio-tungstenite = "0.24"
sha1 = "0.10"
base64 = "0.22"

# Metrics
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"

# For SCP simulation
crossbeam-channel = "0.5"
dashmap = "6"

# Connection rate limiting
parking_lot = "0.12"

# For botho-testnet harness
chrono = "0.4"
nix = { version = "0.29", features = ["signal"] }
which = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
botho-wallet = { path = "../botho-wallet" }
bth-transaction-core = { path = "../transaction/core", features = ["pq"] }
futures = "0.3"
