[package]
name = "botho"
version = "0.3.2"
edition = "2021"
description = "A privacy-preserving mined cryptocurrency"
license = "GPL-3.0"

[features]
default = ["pq"]
pq = ["bth-account-keys/pq", "bth-crypto-pq", "bth-transaction-clsag/pq"]

[lib]
name = "botho"
path = "src/lib.rs"

[[bin]]
name = "botho"
path = "src/main.rs"

[[bin]]
name = "scp_sim"
path = "src/bin/scp_sim.rs"

[[bin]]
name = "botho-testnet"
path = "src/bin/botho_testnet.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.9"
dirs = "5"

# Crypto & Keys
bth-account-keys = { path = "../account-keys" }
bth-crypto-keys = { path = "../crypto/keys" }
bth-crypto-pq = { path = "../crypto/pq", optional = true }
bth-crypto-ring-signature = { path = "../crypto/ring-signature" }
bth-core = { path = "../core" }
bth-util-from-random = { path = "../util/from-random" }
bth-util-serial = { workspace = true }
rand_core = "0.6"
aes = { workspace = true }
ctr = { workspace = true }
hkdf = { workspace = true }
hmac = { workspace = true }

# Monetary Policy
bth-cluster-tax = { path = "../cluster-tax" }
bth-transaction-types = { path = "../transaction/types", default-features = true }
bth-transaction-clsag = { path = "../transaction/clsag" }

# Networking & Consensus
bth-common = { path = "../common", features = ["std"] }
bth-consensus-scp = { path = "../consensus/scp", features = ["test_utils"] }
bth-consensus-scp-types = { path = "../consensus/scp/types", features = ["test_utils"] }
bth-gossip = { path = "../gossip" }
# Quorum promotion gate (#651): exact FBAS quorum-intersection check used to
# refuse quorum-set candidates that could admit disjoint quorums (a fork).
bth-quorum-sim = { path = "../consensus/quorum-sim" }
bth-crypto-digestible = { path = "../crypto/digestible" }
libp2p = { workspace = true, features = [
    "tokio",
    "gossipsub",
    "identify",
    "request-response",
    "noise",
    "tcp",
    "yamux",
    "macros",
    "ed25519",
    "cbor",
] }
futures = "0.3"
bip39 = { package = "tiny-bip39", version = "1" }
rand = "0.8"
rand_distr = "0.4"
hex = "0.4"
sha2 = "0.10"
bs58 = "0.5"

# RandomX proof-of-work (ASIC/GPU-resistant, CPU-egalitarian).
# Builds the RandomX C++ library at compile time (needs cmake + a C++
# toolchain). "1.3" resolves to the latest 1.x (currently 1.4.x).
randomx-rs = "1.3"
siphasher = "1.0"

# System
ctrlc = "3"
num_cpus = "1"

# Storage
heed = "0.20"
bincode = "1"
zstd = "0.13"

# Logging & Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.14", features = ["tonic"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Security
zeroize = { workspace = true }
chacha20poly1305 = { workspace = true }

# TLS tunnel transport (Phase 3.7)
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2"
rcgen = { version = "0.13", default-features = false, features = ["crypto", "ring"] }
ring = "0.17"
webpki-roots = "0.26"
x509-parser = "0.17"
time = "0.3"

# Async (for future networking)
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
async-trait = "0.1"

# JSON-RPC server
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
serde_json = "1"
tokio-tungstenite = "0.24"
sha1 = "0.10"
base64 = "0.22"

# Metrics
prometheus = { version = "0.14", features = ["process"] }
lazy_static = "1.4"

# For SCP simulation
crossbeam-channel = "0.5"
dashmap = "6"

# Connection rate limiting
parking_lot = "0.12"

# DNS seed discovery
hickory-resolver = { version = "0.25", features = ["tokio", "system-config"] }

# WebRTC transport for NAT traversal
webrtc = { workspace = true }
getrandom = "0.2"

# For botho-testnet harness
chrono = "0.4"
nix = { version = "0.29", features = ["signal"] }
which = "7"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

[build-dependencies]
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
botho-wallet = { path = "../botho-wallet" }
# Enable the CLSAG transaction crate's test-only constructors (e.g.
# `Transaction::new_stub_with_fee`) for botho's own test/dev builds.
bth-transaction-clsag = { path = "../transaction/clsag", features = ["test-utils"] }
bth-transaction-core = { path = "../transaction/core", features = ["pq"] }
futures = "0.3"
criterion = { workspace = true }
rand_chacha = { workspace = true }
serial_test = { workspace = true }
statrs = "0.18"

[[bench]]
name = "block_benchmarks"
harness = false

[[bench]]
name = "mempool_benchmarks"
harness = false

[[bench]]
name = "traffic_normalization"
harness = false

[[bench]]
name = "transport_benchmarks"
harness = false
