[package]
name = "cadence-wallet"
version = "0.1.0"
edition = "2021"
description = "Standalone thin wallet client for Cadence cryptocurrency"
license = "Apache-2.0"
rust-version = { workspace = true }

[[bin]]
name = "cadence-wallet"
path = "src/main.rs"

[dependencies]
# Crypto
mc-account-keys = { path = "../account-keys" }
mc-crypto-keys = { path = "../crypto/keys" }
mc-transaction-core = { path = "../transaction/core" }
mc-transaction-types = { path = "../transaction/types" }
mc-core = { path = "../core" }

# BIP39 and key derivation
tiny-bip39 = { workspace = true }
slip10_ed25519 = { workspace = true }

# Encryption
argon2 = "0.5"
chacha20poly1305 = "0.10"

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }

# HTTP client for RPC
reqwest = { workspace = true, features = ["json", "rustls-tls"] }

# CLI
clap = { workspace = true, features = ["derive"] }

# Serialization
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
toml = { workspace = true }
bincode = { workspace = true }
hex = { workspace = true, features = ["std"] }

# Utils
anyhow = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = { workspace = true }
