[package]
name = "cadence"
version = "0.1.0"
edition = "2021"
description = "A privacy-preserving mined cryptocurrency"
license = "GPL-3.0"

[[bin]]
name = "cadence"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"

# Crypto & Keys
mc-account-keys = { path = "../account-keys" }
mc-crypto-keys = { path = "../crypto/keys" }
mc-core = { path = "../core" }

# Networking & Consensus
mc-gossip = { path = "../gossip" }
mc-common = { path = "../common", features = ["std"] }
mc-consensus-scp-types = { path = "../consensus/scp/types" }
libp2p = { version = "0.54", features = ["tokio"] }
futures = "0.3"
bip39 = { package = "tiny-bip39", version = "1" }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# System
ctrlc = "3"
num_cpus = "1"

# Storage
lmdb = { package = "lmdb-rkv", version = "0.14" }
bincode = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Error handling
anyhow = "1"
thiserror = "1"

# Async (for future networking)
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tempfile = "3"
