[package]
name = "bt-cluster-tax"
version = "0.1.0"
edition = "2021"
rust-version = { workspace = true }
description = "Cluster-based progressive transaction fees"

[[bin]]
name = "cluster-tax-sim"
path = "src/bin/sim.rs"

[dependencies]
# Cryptographic primitives for committed tags
curve25519-dalek = { workspace = true, features = ["alloc", "rand_core", "digest"] }
sha2 = { workspace = true }
rand_core = { workspace = true }

# Serialization (optional)
serde = { workspace = true, features = ["derive"], optional = true }

# For CLI
clap = { workspace = true, features = ["derive"], optional = true }
# For random simulation
rand = { workspace = true, features = ["std", "std_rng"], optional = true }

[dev-dependencies]
rand_core = { workspace = true, features = ["getrandom"] }

[features]
default = []
serde = ["dep:serde"]
cli = ["dep:clap", "dep:rand"]
