[package]
name = "bth-common"
version = "7.1.0"
authors = ["Botho"]
edition = "2021"
license = "Apache-2.0"
rust-version = { workspace = true }

[features]
std = ["displaydoc/std", "bth-util-serial/std"]
# Enable tracing-based logging
log = [
    "backtrace",
    "chrono/clock",
    "bth-util-logger-macros",
    "tracing",
    "tracing-subscriber",
]
loggers = [
    # Features
    "log",
    "std",
    # Dependencies
    "hostname",
    "sentry",
    "tracing",
    "tracing-subscriber",
]

[dependencies]
bth-crypto-digestible = { workspace = true }
bth-crypto-keys = { workspace = true, features = ["serde", "alloc", "prost"] }
mc-rand = { workspace = true }
# log- and loggers-only dependencies
bth-util-logger-macros = { workspace = true, optional = true }
# Note: bth-util-serial is an unused dependency, but anywhere we forward serde/std, we need to get rmp-serde/std also, or the build breaks.
bth-util-serial = { workspace = true }

backtrace = { workspace = true, optional = true }
cfg-if = { workspace = true }
chrono = { workspace = true, optional = true }
displaydoc = { workspace = true }
hashbrown = { workspace = true, features = ["serde", "nightly"] }
hostname = { workspace = true, optional = true }
prost = { workspace = true, features = ["prost-derive"] }
rand_core = { workspace = true }
sentry = { workspace = true, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "serde_json", "tracing"], optional = true }
serde = { workspace = true, features = ["alloc", "derive"] }
sha3 = { workspace = true }
siphasher = { workspace = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"], optional = true }

[dev-dependencies]
proptest = { workspace = true, features = ["default-code-coverage"] }
serde_json = { workspace = true }
