[package]
name = "mc-connection"
version = "7.1.0"
authors = ["MobileCoin"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[dependencies]

der = { workspace = true }
mc-api = { path = "../api" }
mc-blockchain-types = { workspace = true }
mc-common = { workspace = true }
mc-consensus-api = { workspace = true }
mc-crypto-keys = { workspace = true }
mc-crypto-noise = { workspace = true }
mc-transaction-core = { workspace = true }
mc-util-grpc = { workspace = true }
mc-util-serial = { workspace = true }
mc-util-uri = { workspace = true }

aes-gcm = { workspace = true }
cookie = { workspace = true }
displaydoc = { workspace = true }
grpcio = { workspace = true, features = ["prost-codec"] }
mc-rand = { workspace = true }
prost = { workspace = true, features = ["prost-derive"] }
retry = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
rand_hc = { workspace = true }
