[package]
name = "bth-connection"
version = "7.1.0"
authors = ["Botho"]
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
rust-version = { workspace = true }

[dependencies]

der = { workspace = true }
bth-api = { path = "../api" }
bth-blockchain-types = { workspace = true }
bth-common = { workspace = true }
bth-consensus-api = { workspace = true }
bth-crypto-keys = { workspace = true }
bth-crypto-noise = { workspace = true }
bth-transaction-core = { workspace = true }
bth-util-grpc-tonic = { workspace = true }
bth-util-serial = { workspace = true }
bth-util-uri = { workspace = true }

aes-gcm = { workspace = true }
base64 = { workspace = true }
displaydoc = { workspace = true }
mc-rand = { workspace = true }
prost = { workspace = true, features = ["derive"] }
retry = { workspace = true }
secrecy = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tonic = { workspace = true, features = ["codegen", "prost", "tls"] }

[dev-dependencies]
rand = { workspace = true }
rand_hc = { workspace = true }
