[package]
name = "mc-core"
version = "7.1.0"
authors = ["MobileCoin"]
edition = "2021"
description = "MobileCoin Core Library"
license = "Apache-2.0"
readme = "README.md"
rust-version = { workspace = true }

[features]
bip39 = ["dep:tiny-bip39", "dep:slip10_ed25519"]
internals = []
serde = ["dep:serde", "mc-core-types/serde"]

default = ["bip39"]

[dependencies]
curve25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
generic-array = { workspace = true, features = ["more_lengths"] }
hkdf = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
sha2 = { workspace = true }
slip10_ed25519 = { workspace = true, optional = true }
tiny-bip39 = { workspace = true, optional = true }
zeroize = { workspace = true }

mc-core-types = { workspace = true }
mc-crypto-hashes = { workspace = true }
mc-crypto-keys = { workspace = true }

[dev-dependencies]

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true }
lazy_static = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

mc-test-vectors-definitions = { workspace = true }
mc-util-from-random = { workspace = true }
mc-util-test-vector = { workspace = true }
mc-util-test-with-data = { workspace = true }

[[example]]
name = "slip10"
path = "examples/slip10.rs"
required-features = ["bip39"]
