[package]
name = "bth-core"
version = "7.1.0"
authors = ["Botho"]
edition = "2021"
description = "Botho Core Library"
license = "Apache-2.0"
readme = "README.md"
rust-version = { workspace = true }

[features]
bip39 = ["dep:tiny-bip39", "dep:slip10_ed25519"]
internals = []
serde = ["dep:serde", "bth-core-types/serde"]

default = ["bip39"]

[dependencies]
curve25519-dalek = { workspace = true }
hkdf = { workspace = true }
serde = { workspace = true, features = ["derive"], optional = true }
sha2 = { workspace = true }
slip10_ed25519 = { workspace = true, optional = true }
tiny-bip39 = { workspace = true, optional = true }
zeroize = { workspace = true }

bth-core-types = { workspace = true }
bth-crypto-hashes = { workspace = true }
bth-crypto-keys = { workspace = true }

[dev-dependencies]

anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

bth-util-from-random = { workspace = true }

[[example]]
name = "slip10"
path = "examples/slip10.rs"
required-features = ["bip39"]
