[package]
name = "bt-discover"
version = "0.1.0"
authors = ["Botho Foundation"]
edition = "2021"
license = "Apache-2.0"
rust-version = { workspace = true }
description = "CLI tool for discovering Botho network topology and generating configurations"

[[bin]]
name = "bt-discover"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
bt-common = { workspace = true, features = ["std"] }
bt-consensus-scp-types = { workspace = true }
bt-crypto-keys = { workspace = true }
bt-gossip = { workspace = true }
bt-util-from-random = { workspace = true }
bt-util-uri = { workspace = true }

# External dependencies
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
futures = { workspace = true }
hex = { workspace = true }
libp2p = { workspace = true, features = ["tokio"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
