[package]
name = "bth-discover"
version = "0.1.0"
authors = ["Botho Foundation"]
edition = "2021"
license = "Apache-2.0"
rust-version = { workspace = true }
description = "CLI tool for discovering Botho network topology and generating configurations"

[[bin]]
name = "bth-discover"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
bth-common = { workspace = true, features = ["std"] }
bth-consensus-scp-types = { workspace = true }
bth-crypto-keys = { workspace = true }
bth-gossip = { workspace = true }
bth-util-from-random = { workspace = true }

# External dependencies
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
hex = { workspace = true }
libp2p = { workspace = true, features = ["tokio"] }
rand = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
